--- a/src/app/view/dashboard/dashboard.component.html
+++ b/src/app/view/dashboard/dashboard.component.html
@@ -33,10 +33,10 @@
 
 
   <div class="global-sales">
-    <div class="BoxTotal" style="padding: 0 ; ">
+    <div class="BoxTotal">
 
-      <div class="row" style="padding: 0 ;">
-        <div class="col-md-6" style="padding: 0 15px 0 0 ;">
+      <div class="row">
+        <div class="col-md-6">
           <div class="filter-container">
             <div class="row">
               <div class="col-md-3">
@@ -99,9 +99,9 @@
      
            </div>
         </div>
-        <div class="col-md-6" style="padding-right: 0;">
+        <div class="col-md-6" >
             <div class="donutChartBG">
-                <h4 width="90px">จำนวนการเซ็น</h4>
+                <h4 width="90px">จำนวนเซ็น</h4>
                 <div class="chart-container">
                   <canvas id="myDonutChart" ></canvas>
                 </div>
@@ -114,7 +114,7 @@
 
         <div class="row">
           <!-- เอกสารทั้งหมด -->
-          <div class="col-md-3" style="padding: 0 0 0;">
+          <div class="col-md-3">
             <div class="card Box1">
               <div class="card-body">
                 <div class="d-flex justify-content-between align-items-center">
@@ -131,7 +131,7 @@
             </div>
           </div>
           <!-- เอกสารที่ถูกเซ็น -->
-          <div class="col-md-3" style="padding: 0 7.5px 0 15px;">
+          <div class="col-md-3" >
             <div class="card Box2">
               <div class="card-body">
                 <div class="d-flex justify-content-between align-items-center">
@@ -151,7 +151,7 @@
             </div>
           </div>
           <!-- จำนวนกระดาษ -->
-          <div class="col-md-3" style="padding-left:7.5px ;">
+          <div class="col-md-3" >
             <div class="card Box3">
               <div class="card-body">
                 <div class="d-flex justify-content-between align-items-center">
@@ -168,7 +168,7 @@
             </div>
           </div>
           <!-- จำนวนผู้ใช้งาน -->
-          <div class="col-md-3" style="padding: 0 ;">
+          <div class="col-md-3">
             <div class="card Box4">
               <div class="card-body">
                 <div class="d-flex justify-content-between align-items-center">
@@ -190,7 +190,7 @@
 
       <div class="content-dashboard">
         <div class="row">
-          <div class="col-sm-8" style="padding-left: 0;">
+          <div class="col-sm-8">
 
             <div class="BGchart">
               <h4>เอกสาร & ผู้ใช้งาน</h4>
@@ -209,12 +209,12 @@
 
           </div>
 
-          <div class="col-sm-4" style="padding-right: 0;">
+          <div class="col-sm-4" >
             <app-map></app-map>
           </div>
         </div>
         <div class="row">
-          <div class="col-sm-12"  style="padding: 0;">
+          <div class="col-sm-12" >
             <app-thaicounty [filterCriteria]="filterCriteria"></app-thaicounty>
           </div>
 
