--- a/src/app/view/manageuser/manageuser.component.html
+++ b/src/app/view/manageuser/manageuser.component.html
@@ -1,7 +1,13 @@
 <div class="main-content">
   <div class="card">
     <div class="card-header "><!--card-header-danger-->
-      <h4 class="card-title">  จัดการผู้ใช้งาน</h4>
+      <div class="card-title">  
+        <a href=""> จัดการผู้ใช้งาน</a>
+      
+        <div class="sub-title">
+          แสดงรายชื่อผู้ใช้งาน
+        </div>
+      </div>
       <button class="btn btn-add">สร้างผู้ใช้</button>
     </div>
     <div class="card-body">
