--- a/src/app/view/reportuser/reportuserbuild/reportuserbuild.component.html
+++ b/src/app/view/reportuser/reportuserbuild/reportuserbuild.component.html
@@ -2,7 +2,12 @@
 <div class="main-content">
     <div class="card">
       <div class="card-header "> <!--card-header-danger-->
-        <h4 class="card-title">  รายงานผู้ใช้งานระบบ</h4>
+        <div class="card-title"> 
+          <a href=""> รายงานการสร้างเอกสาร</a>
+          <div class="sub-title">
+            แสดงรายชื่อผู้สร้างเอกสาร
+          </div>
+        </div>
         <button (click)="exportToExcel()" class="btn btn-add" style="float: right;">Export to excel</button>
       </div>
       <div class="card-body">
