--- a/src/app/view/profile/profile.component.css
+++ b/src/app/view/profile/profile.component.css
@@ -7,7 +7,10 @@
 .card{
   padding: 20px;
 }
-
+h4{
+  font-family: 'sarabun',sans-serif;
+  font-weight: 900;
+}
 
 
 
@@ -59,6 +62,59 @@
 /* 9. Add bottom margin to .form-control */
 .form-control {
   margin-bottom: 10px;
+  margin-bottom: 1rem;
+  border: 1px solid rgb(167, 167, 167);
+  border-radius: 10px;
+  padding-left: 10px;
+}
+
+.form-select{
+  margin-bottom: 1rem;
+  border: 1px solid rgb(167, 167, 167);
+  background-color: transparent;
+  border-radius: 10px;
+  padding-left: 10px;
+  width: 100%;
+  height: 36px;
+}
+
+.select-wrapper {
+  position: relative;
+  display: inline-block;
+  width: 100%; /* ปรับตามความต้องการ */
+}
+
+.select-wrapper select {
+  width: 100%; /* ปรับให้ `<select>` ขยายเต็มที่ตามขนาดของ wrapper */
+  padding-right: 2rem; /* เพิ่ม padding ด้านขวาเพื่อเว้นที่สำหรับไอคอน */
+  appearance: none; /* ลบ default arrow ของ select */
+}
+
+.select-wrapper .iconSelect {
+  position: absolute;
+  right: 1.5rem; /* ปรับตำแหน่งขวาของไอคอน */
+  top: 52%;
+  transform: translateY(-50%);
+  pointer-events: none; /* ทำให้ไอคอนไม่สามารถถูกคลิกได้ */
+  transition: transform 0.3s ease;
+}
+
+.select-wrapper .iconSelect.rotate i {
+  transform: rotate(180deg); /* หมุนไอคอน 180 องศา */
+}
+
+.password-position input{
+  position: relative;
+  width: 100%;
+  padding-right: 2rem;
+}
+.eyePassword{
+  position: absolute;
+  right: 1.5rem;
+  top: 33%;
+  transform: translateY(-50%);
+  background: transparent;
+  border: transparent;
 }
 
 /* 10. Style the submit button (.btn-danger.btn-round) */
@@ -73,8 +129,18 @@ i{
 }
 /*userInfo*/
 .title{
+  display: flex;
   padding: 10px;
   border-bottom: 1px solid rgb(189, 186, 186);
+  justify-content: space-between;
+}
+.title button{
+  background-color: transparent;
+  border: transparent;
+
+}
+.title button:hover{
+  text-decoration: underline;
 }
 .userInfo{
   margin-bottom: 10px;
@@ -103,6 +169,11 @@ i{
   padding: 10px;
   font-family: 'Sarabun',sans-serif;
 }
+.footer-content{
+  display: flex;
+  justify-content: center;
+}
+
 
 
 
