--- a/src/app/view/reportuser/reportuser.component.html
+++ b/src/app/view/reportuser/reportuser.component.html
@@ -1,7 +1,12 @@
 <div class="main-content">
   <div class="card">
     <div class="card-header"> <!-- card-header-danger-->
-      <h4 class="card-title">รายงานผู้ใช้งานระบบ</h4>
+      <div class="card-title">
+        <a href="">รายงานการเข้าใช้งาน</a>
+        <div class="sub-title">
+            แสดงรายชื่อผู้เข้าใช้งานระบบ
+        </div>
+      </div>
       <button (click)="exportToExcel()" class="btn btn-add" style="float: right;">Export to excel</button>
     </div>
     <div class="card-body">
