--- a/src/app/view/table-main/table-main.component.css
+++ b/src/app/view/table-main/table-main.component.css
@@ -16,10 +16,20 @@
     margin: 0 ;
     border-radius: 10px;
   }
-
-  h4{
-    font-weight: 900;
+  .sub-title{
+    position: relative;
+    font-family: "Sarabun", sans-serif; 
+    font-size: 14px;
+    display: flex;
+    align-items: self-start;
+    color: #7B809A;
   }
+  .card-title a{
+    font-family: "Sarabun", sans-serif; 
+    font-weight: 900;
+    font-size: 18px;
+  }
+ 
   .card{
     padding: 30px;
   }
