--- a/src/app/view/thaicounty/thaicounty.component.css
+++ b/src/app/view/thaicounty/thaicounty.component.css
@@ -35,7 +35,19 @@ table {
   width: 100%;
   border-collapse: collapse;
 }
-
+.card-title a{
+  font-family: 'Sarabun',sans-serif;
+  font-weight: 900;
+  font-size: 18px;
+}
+.sub-title{
+  position: relative;
+  font-family: "Sarabun", sans-serif; 
+  font-size: 14px;
+  display: flex;
+  align-items: self-start;
+  color: #7B809A;
+}
 h4{
   font-family: 'Sarabun',sans-serif;
   font-weight: 900;
