--- a/src/app/view/thaicounty/thaicounty.component.html
+++ b/src/app/view/thaicounty/thaicounty.component.html
@@ -7,9 +7,13 @@
       
     </div> -->
     <div class="card-header" style="border-radius: 10px 10px 0 0;">
-      <h4 class="card-title" style="font-weight: 900;">
-     รายงานการใช้เอกสาร
-      </h4>
+      <div class="card-title">
+        <a href="">  รายงานการใช้เอกสาร</a>
+   
+     <div class="sub-title">
+      แสดงการใช้งานเอกสาร
+     </div>
+    </div>
       <button class="btn btn-add">Export to excel</button>
     </div>
 
