--- a/src/app/signature/signature.component.html
+++ b/src/app/signature/signature.component.html
@@ -20,7 +20,7 @@
       <div class="col-sm-12" *ngIf="loading">
         <div class="page-text1" id="pageDisplay" >จำนวนหน้า: {{currentPage}}/{{totalPages}}</div>
         <div class="pagination-container">
-          <div class="d-flex align-items-center justify-content-center pagination-controls">c 
+          <div class="d-flex align-items-center justify-content-center pagination-controls">  
             <button class="btn-custom" type="button" (click)="prevPage()">
               <i class="fa fa-arrow-left"></i>
             </button>
