19//08 profile and tatble btn box and then signature new form

--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -2,6 +2,7 @@
     cursor: pointer;
     
     margin: 0 20px;
+    object-fit: cover;
 }
 .Profile img:hover{
     border: 2px solid rgb(0, 198, 0);
