--- a/src/app/view/thaicounty/thaicounty.component.css
+++ b/src/app/view/thaicounty/thaicounty.component.css
@@ -5,15 +5,18 @@
   padding: 30px;
  
 }
+.card .card-body{
+  padding: 0 20px 0.9375rem ;
+}
 .card-header{
   position: relative;
-  background-color: rgb(255,209,0,0.2);
+  /* background-color: rgb(255,209,0,0.2); */
 
   display: flex;
   justify-content: space-between ;
   align-items: center;
   margin: 0 ;
-  border-radius: 10px;
+  border-radius: 10px;  
 }
 
 .main-content{
@@ -22,7 +25,9 @@
 }
 .card-header {
   font-size: 1.25rem;
-  margin-bottom: 8px;
+  padding: 0.75rem 1.25rem 0;
+  /* margin-bottom: 8px; */
+  
 }
 
 .card-body {
@@ -35,7 +40,7 @@ table {
   width: 100%;
   border-collapse: collapse;
 }
-.card-title a{
+.card-title p{
   font-family: 'Sarabun',sans-serif;
   font-weight: 900;
   font-size: 18px;
@@ -52,6 +57,12 @@ h4{
   font-family: 'Sarabun',sans-serif;
   font-weight: 900;
   /* padding: 0 0 20px; */
+}
+
+.position-btn{
+  position: absolute;
+  right: 230px;
+  top: 45px;
 }
 th, td {
   padding: 8px;
