--- a/src/app/view/thaicounty/thaicounty.component.html
+++ b/src/app/view/thaicounty/thaicounty.component.html
@@ -8,13 +8,9 @@
     </div> -->
     <div class="card-header" style="border-radius: 10px 10px 0 0;">
       <div class="card-title">
-        <a href="">  รายงานการใช้เอกสาร</a>
-   
-     <div class="sub-title">
-      แสดงการใช้งานเอกสาร
-     </div>
+        <p>  รายงานการใช้เอกสาร</p>
     </div>
-      <button class="btn btn-add">Export to excel</button>
+      <button class="btn btn-add position-btn">Export to excel</button>
     </div>
 
 
