--- a/src/app/view/manageuser/manageuser.component.html
+++ b/src/app/view/manageuser/manageuser.component.html
@@ -4,11 +4,11 @@
       <div class="card-title">  
         <a href=""> จัดการผู้ใช้งาน</a>
       
-        <div class="sub-title">
+        <!-- <div class="sub-title">
           แสดงรายชื่อผู้ใช้งาน
-        </div>
+        </div> -->
       </div>
-      <button class="btn btn-add">สร้างผู้ใช้</button>
+      <button class="btn btn-add position-btn">สร้างผู้ใช้</button>
     </div>
     <div class="card-body">
       <table width="100%" datatable [dtOptions]="dtOptions" class="table table-striped table-bordered" *ngIf="!loading">
