--- a/src/app/view/manageuser/profileuser/profileuser.component.html
+++ b/src/app/view/manageuser/profileuser/profileuser.component.html
@@ -20,9 +20,9 @@
                             <div class="card-avatar">
                                 <a href="javascript:void(0)">
                                 <img class="img" [src]="profileImgUrl" />
-                                <div class="upload">
+                                <!-- <div class="upload">
                                     <i class="fa fa-camera"></i>
-                                </div>
+                                </div> -->
                                 </a>
 
                                
@@ -50,7 +50,12 @@
                             <div class="userInfo">
                                 <div class="title">
                                    <h4> ข้อมูลผู้ใช้</h4>
-                                   <button  type="button" (click)=" editProfile()">แก้ไขข้อมูลส่วนตัว</button>
+                                   <!-- <button  type="button" (click)=" editProfile()">แก้ไขข้อมูลส่วนตัว</button> -->
+                                    <div>
+                                        <button type="button" class="btn btn-add"  (click)="resetPassword(UserID, 'newPasswordHere')" >Reset Password</button>
+                                      <button type="button" class="btn btn-danger">disabled user</button>
+                                    </div>
+                                    
                                 </div>
                                 <div class="user-content">
                                     <div class="row">
