--- a/src/app/view/reportuser/reportuser.component.css
+++ b/src/app/view/reportuser/reportuser.component.css
@@ -2,7 +2,7 @@
   
   .card-header{
     position: relative;
-    background-color:rgb(255,209,0,0.2) ;/* rgb(241, 245 ,255)*/
+    /* background-color:rgb(255,209,0,0.2) ;rgb(241, 245 ,255) */
     font-family: 'Sarabun',sans-serif;
 
     display: flex;
@@ -10,6 +10,7 @@
     align-items: center;
     margin: 0 ;
     border-radius: 10px;
+    padding: 0.75rem 1.25rem 0;
   }
   
   h4{
@@ -32,6 +33,12 @@
 
   .card{
     padding: 30px;
+  }
+
+  .position-btn{
+    position: absolute;
+    right: 230px;
+    top: 45px;
   }
   .card-body {
     display: flex;
