--- a/src/app/view/reportuser/reportuser.component.html
+++ b/src/app/view/reportuser/reportuser.component.html
@@ -3,11 +3,11 @@
     <div class="card-header"> <!-- card-header-danger-->
       <div class="card-title">
         <a href="">รายงานการเข้าใช้งาน</a>
-        <div class="sub-title">
+        <!-- <div class="sub-title">
             แสดงรายชื่อผู้เข้าใช้งานระบบ
-        </div>
+        </div> -->
       </div>
-      <button (click)="exportToExcel()" class="btn btn-add" style="float: right;">Export to excel</button>
+      <button (click)="exportToExcel()" class="btn btn-add position-btn" style="float: right;">Export to excel</button>
     </div>
     <div class="card-body">
       <table width="100%" datatable [dtOptions]="dtOptions" class="table table-striped table-bordered" *ngIf="!loading">
