--- a/src/app/view/table-main/table-main.component.html
+++ b/src/app/view/table-main/table-main.component.html
@@ -29,11 +29,11 @@
                 การลงตรวจอิเล็กทรอนิค
               </a>
             
-              <div class="sub-title">
+              <!-- <div class="sub-title">
                 แสดงรายการเอกสารลงพื้นที่
-              </div>
+              </div> -->
             </div>
-            <button class="btn btn-add pull-center " (click)="onInsertModal()">
+            <button class="btn btn-add pull-center position-btn" (click)="onInsertModal()">
               <i class="fa fa-plus"></i> &nbsp;เพิ่มหัวข้อเอกสาร
             </button>
           </div>
