--- a/src/app/signature/signature.component.css
+++ b/src/app/signature/signature.component.css
@@ -35,6 +35,8 @@
   }
   
   .signature-container {
+    display: flex;
+    justify-content: center;
     border-style: dashed;
     border-width: 1px;
     border-color: black;
@@ -75,7 +77,11 @@
     justify-content: center;
   }
 
-  .signature-container .submit-content{
+  .btn-create-sign{
+    display: flex;
+    justify-content: center;
+  }
+   .submit-content{
     display: flex;
     justify-content: center;
   }
