--- a/src/app/view/dashboard/dashboard.component.html
+++ b/src/app/view/dashboard/dashboard.component.html
@@ -101,7 +101,7 @@
         </div>
         <div class="col-md-6" >
             <div class="donutChartBG">
-                <h4 width="90px">จำนวนเซ็น</h4>
+                <h4 width="90px">จำนวนการลงนาม</h4>
                 <div class="chart-container">
                   <canvas id="myDonutChart" ></canvas>
                 </div>
